ADD: Lockfile + if-env

--- a/preact/package.json
+++ b/preact/package.json
@@ -15,5 +15,8 @@
   "license": "ISC",
   "eslintConfig": {
     "extends": "eslint-config-synacor"
+  },
+  "devDependencies": {
+    "if-env": "^1.0.0"
   }
 }
