--- a/preact/src/manifest.json
+++ b/preact/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Preact PWA",
-  "short_name": "Preact PWA",
+  "name": "sindreboyum.no",
+  "short_name": "sindreboyum.no",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
